@@ -1,4 +1,5 @@
 [CW12]
+* SyncProxyTester: Check open session (by Session Id) when executing automatic tests DISABLED
 + SyncProxyTester: Check connection and open session when executing automatic tests
 + SyncProxyTester: Set AppId parameter at Application SetUp dialog
 
